<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DetailActivity">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <ImageButton
        android:id="@+id/ibnProfilePicture"
        android:layout_width="120dp"
        android:layout_height="118dp"
        android:background="@drawable/default_profile_picture" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:text="@string/friend_name_show" />

            <EditText
                android:id="@+id/dtxName"
                android:text="@string/friend_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dip">

            <TextView android:text="@string/friend_phone_number_show" />

            <EditText
                android:id="@+id/dtxPhoneNumber"
                android:text="@string/friend_phone_number" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:text="@string/friend_email_show" />

            <EditText
                android:id="@+id/dtxEmail"
                android:text="@string/friend_email" />
        </TableRow>

        <Button
            android:id="@+id/btnCall"
            android:text="@string/call" />
        <Button
            android:id="@+id/btnMessage"
            android:text="@string/message" />
        <Button
            android:id="@+id/btnEmail"
            android:text="@string/email" />
    </TableLayout>
</LinearLayout>